[package]
name = "napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = [
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "async",
]}
futures = "0.3.21"
napi-derive = "2"
tokio = "1.19.2"
murmurhash32 = {git = "https://github.com/gorilla-devs/murmurhash32.git"}

[build-dependencies]
napi-build = "1"